Done EditorText and Header components

--- a/package.json
+++ b/package.json
@@ -15,12 +15,22 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@reduxjs/toolkit": "^2.5.0",
+    "@types/draft-js": "^0.11.18",
+    "@types/draftjs-to-html": "^0.8.4",
+    "@types/react-draft-wysiwyg": "^1.13.8",
     "axios": "^1.7.9",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
+    "fbjs": "^3.0.5",
     "noteapp-fe": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.54.2",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
+    "rollup-plugin-node-globals": "^1.4.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -28,6 +38,7 @@
     "@types/node": "^22.10.5",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/rollup-plugin-node-globals": "^1.4.5",
     "@types/tailwindcss": "^3.0.11",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
@@ -36,6 +47,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "postcss": "^8.4.49",
+    "rollup-plugin-polyfill-node": "^0.13.0",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
