--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-VITE_REACT_APP_API_USER=http://localhost:3001/api
+VITE_REACT_APP_API_USER=http://localhost:3001/api/user
+VITE_REACT_APP_API_FOLDER=http://localhost:3002/api/folder
+VITE_REACT_APP_API_NOTE=http://localhost:3003/api/note
